# omega_format

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSES_OF_REQUIREMENTS.md  MANIFEST.in  README.md  __init__.py  environment.yml  environment_visualization.yml  mermaidjs_hierarchys.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
cpp/: CMakeLists.txt  README.md  build.sh
cpp/include/: MetaData.h  ReferenceRecording.h  hdf5_utility.h  vvm_definitions.h
cpp/include/dynamics/: BoundingBox.h  MiscObject.h  RoadUser.h  Trajectory.h  VehicleLights.h
cpp/include/road/: Border.h  Boundary.h  FlatMarking.h  Lane.h  LateralMarking.h  Road.h  RoadObject.h  Sign.h  StructuralObject.h  Surface.h
cpp/include/weather/: AirPressure.h  Cloudiness.h  GustOfWind.h  Humidity.h  Precipitation.h  RoadCondition.h  Solar.h  Temperature.h  Visibility.h  Weather.h  Wind.h
cpp/src/: MetaData.cpp  ReferenceRecording.cpp
cpp/src/dynamics/: BoundingBox.cpp  MiscObject.cpp  RoadUser.cpp  Trajectory.cpp  VehicleLights.cpp
cpp/src/road/: Border.cpp  Boundary.cpp  FlatMarking.cpp  Lane.cpp  LateralMarking.cpp  Road.cpp  RoadObject.cpp  Sign.cpp  StructuralObject.cpp  Surface.cpp
cpp/src/weather/: AirPressure.cpp  Cloudiness.cpp  GustOfWind.cpp  Humidity.cpp  Precipitation.cpp  RoadCondition.cpp  Solar.cpp  Temperature.cpp  Visibility.cpp  Weather.cpp  Wind.cpp
doc/: signal_list_reference.md  specification.md
doc/images/: sources.csv
doc/perception/: signal_list.md  specifcation.md
doc/templates/: config.mako  logo.mako
omega_format/: __init__.py  _version.py  cli.py  meta_data.py  perception_recording.py  reference_recording.py  reference_resolving.py  settings.py  timestamps.py
omega_format/converters/: from_level_x_like.py
omega_format/converters/from_asam_opendrive/: __init__.py  eulerspiral.py  from_asam_opendrive.py
omega_format/converters/from_asam_opendrive/opendriveconverter/: __init__.py  converter.py  logger.py
omega_format/converters/from_asam_opendrive/opendriveconverter/elements/: __init__.py  boundary.py  centerLinePoints.py  junction.py  lane.py  mapping.py  objects.py  objectsTunnelBridge.py  polyline.py  road.py  roads.py  signals.py
omega_format/converters/from_asam_opendrive/opendriveparser/: __init__.py  parser.py
omega_format/converters/from_asam_opendrive/opendriveparser/elements/: __init__.py  header.py  junction.py  junctionGroup.py  objectBorders.py  objectLaneValidity.py  objectMarkings.py  objectMaterial.py  objectOutline.py  objectRepeat.py  objects.py  openDrive.py  road.py  roadElevationProfile.py  roadLanes.py  roadLateralProfile.py  roadLink.py  roadPlanView.py  roadSurface.py  roadType.py  signal.py  signalDependency.py  signalPosition.py  signalReference.py
omega_format/dynamics/: __init__.py  bounding_box.py  dynamic_object.py  misc_object.py  road_user.py  trajectory.py  vehicle_lights.py
omega_format/enums/: README.md  __init__.py  generate_enums.py  perception_types.h  perception_types.json  perception_types.py  reference_types.h  reference_types.json  reference_types.py
omega_format/geometry/: __init__.py  polyline.py  position.py
omega_format/perception/: __init__.py  config.json  converter.py  ego_position.py  meta_object.py  misc_info.py  object.py  sensor.py  valvar.py
omega_format/pydantic_utils/: pydantic_config.py
omega_format/road/: __init__.py  border.py  boundary.py  flat_marking.py  lane.py  lateral_marking.py  road.py  road_object.py  sign.py  state.py  structural_object.py  surface.py
omega_format/visualization/: README.md  __init__.py  pyqt_helper.py  visualizer.py
omega_format/visualization/modules/: __init__.py  base.py  objects.py  perc_objects.py  perc_sensors.py  roads.py
omega_format/visualization/modules/weather/: __init__.py  weather.py
omega_format/visualization/modules/weather/icons/: LICENSE.md
omega_format/visualization/ui/: main.ui
omega_format/weather/: __init__.py  air_pressure.py  cloudiness.py  gust_of_wind.py  humidity.py  precipitation.py  road_condition.py  solar.py  temperature.py  visibility.py  weather.py  wind.py
tests/: README.md  test_read_write_consistency.py  test_readme_examples.py
tutorials/: 01_Introduction.ipynb  02_CLI_Usage.ipynb  03_Converters.ipynb  04_Visualization.ipynb
