[build-system]
requires = ["setuptools", "setuptools-scm", "ruff"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["omega_format*"]
namespaces = false


[project]
name = "omega_format"
authors = [
    {name = "ika - RWTH Aachen", email = "michael.schuldes@ika.rwth-aachen.de"},
]
description = "OMEGAFormat Library (read/write/visualize): A Comprehensive Format of Traffic Recordings for Scenario Extraction"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["automated driving", "traffic", "scenario"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'h5py',
    'tqdm',
    'typer',
    'xarray',
    'scipy',
    'pydantic>=2',
    'pydantic-settings',
    'pydantic-numpy',
    'parse',
    'shapely',
    'pyproj',
    'lxml'
]
version = "4.4.1"

[project.optional-dependencies]
visualization = ['pyqtgraph', 'pyqt5']
doc = ['pdoc3']
test = ['ruff', 'pytest', 'pytest-sugar', 'pytest-env','pytest-cov','pytest-progress', 'nbval']

[project.scripts]
omega_format = "omega_format.cli:app"

[tool.pytest.ini_options]
addopts = "-ra --junitxml=report.xml --nbval"
testpaths = [
    "tests",
    "tutorials/01_Introduction.ipynb",
    "tutorials/02_CLI_Usage.ipynb",
    "tutorials/03_Converters.ipynb"
]
log_cli = true


[tool.ruff]
lint.ignore = ["E741"]

[tool.setuptools.package-data]
"omega_format" = [
    "visualization/ui/main.ui",
    "visualization/ui/icon.svg",
    "perception/config.json"
]

[tool.licensecheck]
# run `pip install licensecheck` and `licensecheck`
using = "PEP631:visualization"
ignore_licenses = ["mpl"]
ignore_packages = [
    "pydantic_numpy", #  is BSD4 = BSD3 + "advertising clause" that requires an acknowledgment of the original source in all advertising material.
]   
zero = true
